Bug 1295062 - Fix mask-position initial value in nsRuleNode::ComputeSVGResetData. r=astley,heycam

MozReview-Commit-ID: EvbSdG0xLtV